# sourmash_plugin_sketchall

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: sketchall.snakefile  sourmash_plugin_sketchall.py
tests/: conftest.py  test_sourmash_sketchall.py
